--- a/learn-css-flex-box.html
+++ b/learn-css-flex-box.html
@@ -9,24 +9,30 @@
   <style>
     .parent {
       display: flex;
-      background-color: aqua;
-      justify-content: center;
-      height: 200px;
-      align-items: flex-end;
+      background-color: skyblue;
     }
     .child {
       width: 100px;
       height: 100px;
-      background-color: blue;
+      background-color: mediumblue;
       margin-right: 8px;
       border: 2px solid black;
+    }
+    #child1 {
+      flex: 1;
+    }
+    #child2 {
+      flex: 1;
+    }
+    #child3 {
+      flex: 1 1 200px;
     }
   </style>
   <body>
     <div class="parent">
-      <div class="child">자식</div>
-      <div class="child">자식</div>
-      <div class="child">자식</div>
+      <div id="child1" class="child">자식1</div>
+      <div id="child2" class="child">자식2</div>
+      <div id="child3" class="child">자식3</div>
     </div>
   </body>
 </html>
