--- a/grab-market/index.html
+++ b/grab-market/index.html
@@ -19,12 +19,19 @@
       </div>
       <h1>판매되는 상품들</h1>
       <div id="product-list">
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
-        <div class="product-card"></div>
+        <div class="product-card">
+          <div>
+            <img class="product-img" src="images/products/basketball1.jpeg" alt="" />
+          </div>
+          <div class="product-contents">
+            <span class="product-name">농구공 1호</span>
+            <span class="product-price">50,000원</span>
+            <div class="product-seller">
+              <img class="product-avatar" src="images/icons/avatar.png" alt="" />
+              <span>그랩</span>
+            </div>
+          </div>
+        </div>
       </div>
       <dov id="product-list"></dov>
     </div>
