--- a/grab-market/index.html
+++ b/grab-market/index.html
@@ -32,6 +32,45 @@
             </div>
           </div>
         </div>
+        <div class="product-card">
+          <div>
+            <img class="product-img" src="images/products/keyboard1.jpg" alt="" />
+          </div>
+          <div class="product-contents">
+            <span class="product-name">키보드 1호</span>
+            <span class="product-price">30,000원</span>
+            <div class="product-seller">
+              <img class="product-avatar" src="images/icons/avatar.png" alt="" />
+              <span>그랩</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div>
+            <img class="product-img" src="images/products/basketball1.jpeg" alt="" />
+          </div>
+          <div class="product-contents">
+            <span class="product-name">농구공 1호</span>
+            <span class="product-price">50,000원</span>
+            <div class="product-seller">
+              <img class="product-avatar" src="images/icons/avatar.png" alt="" />
+              <span>그랩</span>
+            </div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div>
+            <img class="product-img" src="images/products/basketball1.jpeg" alt="" />
+          </div>
+          <div class="product-contents">
+            <span class="product-name">농구공 1호</span>
+            <span class="product-price">50,000원</span>
+            <div class="product-seller">
+              <img class="product-avatar" src="images/icons/avatar.png" alt="" />
+              <span>그랩</span>
+            </div>
+          </div>
+        </div>
       </div>
       <dov id="product-list"></dov>
     </div>
