--- a/grab-market/index.html
+++ b/grab-market/index.html
@@ -18,62 +18,59 @@
         <img src="images/banners/banner1.png" />
       </div>
       <h1>판매되는 상품들</h1>
-      <div id="product-list">
-        <div class="product-card">
-          <div>
-            <img class="product-img" src="images/products/basketball1.jpeg" alt="" />
-          </div>
-          <div class="product-contents">
-            <span class="product-name">농구공 1호</span>
-            <span class="product-price">50,000원</span>
-            <div class="product-seller">
-              <img class="product-avatar" src="images/icons/avatar.png" alt="" />
-              <span>그랩</span>
-            </div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div>
-            <img class="product-img" src="images/products/keyboard1.jpg" alt="" />
-          </div>
-          <div class="product-contents">
-            <span class="product-name">키보드 1호</span>
-            <span class="product-price">30,000원</span>
-            <div class="product-seller">
-              <img class="product-avatar" src="images/icons/avatar.png" alt="" />
-              <span>그랩</span>
-            </div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div>
-            <img class="product-img" src="images/products/basketball1.jpeg" alt="" />
-          </div>
-          <div class="product-contents">
-            <span class="product-name">농구공 1호</span>
-            <span class="product-price">50,000원</span>
-            <div class="product-seller">
-              <img class="product-avatar" src="images/icons/avatar.png" alt="" />
-              <span>그랩</span>
-            </div>
-          </div>
-        </div>
-        <div class="product-card">
-          <div>
-            <img class="product-img" src="images/products/basketball1.jpeg" alt="" />
-          </div>
-          <div class="product-contents">
-            <span class="product-name">농구공 1호</span>
-            <span class="product-price">50,000원</span>
-            <div class="product-seller">
-              <img class="product-avatar" src="images/icons/avatar.png" alt="" />
-              <span>그랩</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <dov id="product-list"></dov>
+      <div id="product-list"></div>
     </div>
     <div id="footer"></div>
   </body>
+  <script>
+    var products = [
+      {
+        name: "농구공",
+        price: "100,000원",
+        seller: "조던",
+        imageUrl: "images/products/basketball1.jpeg",
+      },
+      {
+        name: "축구공",
+        price: "50,000원",
+        seller: "메시",
+        imageUrl: "images/products/soccerball1.jpg",
+      },
+      {
+        name: "키보드",
+        price: "10,000원",
+        seller: "그랩",
+        imageUrl: "images/products/keyboard1.jpg",
+      },
+    ];
+
+    let productsHtml = "";
+    for (var i = 0; i < products.length; i++) {
+      let product = products[i];
+      productsHtml =
+        productsHtml +
+        '<div class="product-card">' +
+        "<div>" +
+        '<img class="product-img" src="' +
+        product.imageUrl +
+        '" />' +
+        "</div>" +
+        '<div class="product-contents">' +
+        '<span class="product-name">' +
+        product.name +
+        "</span>" +
+        '<span class="product-price">' +
+        product.price +
+        "</span>" +
+        '<div class="product-seller">' +
+        '<img class="product-avatar" src="images/icons/avatar.png" />' +
+        "<span>" +
+        product.seller +
+        "</span>" +
+        "</div>" +
+        "</div>" +
+        "</div>";
+    }
+    document.querySelector("#product-list").innerHTML = productsHtml;
+  </script>
 </html>
