--- a/grab-market/index.html
+++ b/grab-market/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Market</title>
     <link rel="stylesheet" href="index.css" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div id="header">
@@ -23,54 +24,43 @@
     <div id="footer"></div>
   </body>
   <script>
-    var products = [
-      {
-        name: "농구공",
-        price: "100,000원",
-        seller: "조던",
-        imageUrl: "images/products/basketball1.jpeg",
-      },
-      {
-        name: "축구공",
-        price: "50,000원",
-        seller: "메시",
-        imageUrl: "images/products/soccerball1.jpg",
-      },
-      {
-        name: "키보드",
-        price: "10,000원",
-        seller: "그랩",
-        imageUrl: "images/products/keyboard1.jpg",
-      },
-    ];
-
-    let productsHtml = "";
-    for (var i = 0; i < products.length; i++) {
-      let product = products[i];
-      productsHtml =
-        productsHtml +
-        '<div class="product-card">' +
-        "<div>" +
-        '<img class="product-img" src="' +
-        product.imageUrl +
-        '" />' +
-        "</div>" +
-        '<div class="product-contents">' +
-        '<span class="product-name">' +
-        product.name +
-        "</span>" +
-        '<span class="product-price">' +
-        product.price +
-        "</span>" +
-        '<div class="product-seller">' +
-        '<img class="product-avatar" src="images/icons/avatar.png" />' +
-        "<span>" +
-        product.seller +
-        "</span>" +
-        "</div>" +
-        "</div>" +
-        "</div>";
-    }
-    document.querySelector("#product-list").innerHTML = productsHtml;
+    axios
+      .get("https://e00f3d28-e973-41db-aee4-d8896d217869.mock.pstmn.io/products")
+      .then(function (result) {
+        console.log("통신 결과 :", result);
+        const products = result.data.products;
+        let productsHtml = "";
+        for (var i = 0; i < products.length; i++) {
+          let product = products[i];
+          productsHtml =
+            productsHtml +
+            '<div class="product-card">' +
+            "<div>" +
+            '<img class="product-img" src="' +
+            product.imageUrl +
+            '" />' +
+            "</div>" +
+            '<div class="product-contents">' +
+            '<span class="product-name">' +
+            product.name +
+            "</span>" +
+            '<span class="product-price">' +
+            product.price +
+            "원" +
+            "</span>" +
+            '<div class="product-seller">' +
+            '<img class="product-avatar" src="images/icons/avatar.png" />' +
+            "<span>" +
+            product.seller +
+            "</span>" +
+            "</div>" +
+            "</div>" +
+            "</div>";
+        }
+        document.querySelector("#product-list").innerHTML = productsHtml;
+      })
+      .catch(function (error) {
+        console.error("에러 발생 :", error);
+      });
   </script>
 </html>
